Log level can be configured through config

--- a/config-template.yml
+++ b/config-template.yml
@@ -32,4 +32,4 @@ useWatcher: false
 # Check the available list of fonts here: https://github.com/gravetii/go-figure/tree/master/fonts.
 bannerFont: "starwars"
 
-
+logLevel: "info"
