--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -62,8 +62,8 @@
                     <protocArtifact>com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.18.0:exe:${os.detected.classifier}</pluginArtifact>
-                    <protoSourceRoot>${basedir}/src/main/resources</protoSourceRoot>
-                    <outputDirectory>${basedir}/src/main/java/io/github/gravetii/gen</outputDirectory>
+                    <protoSourceRoot>${basedir}/src/main/resources/proto</protoSourceRoot>
+                    <outputDirectory>${basedir}/src/main/java</outputDirectory>
                     <clearOutputDirectory>false</clearOutputDirectory>
                 </configuration>
                 <executions>
